# terminal-arcade-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  firebase_config.py  main.py  nginx-http.conf  postgres-testing.env  pyproject.toml  requirements.txt
api/: auth.py  brython.py  creator_leaderboard.py  games.py  login.py  middleware.py  player_leaderboard.py  ratings.py  timer_middleware.py  user.py
models/: __init__.py  game.py  leaderboard.py  play.py  player_leaderboard.py  rating.py  user.py
