[project]
name = "terminal-arcade-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=5.5.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "firebase>=4.0.1",
    "firebase-admin>=6.7.0",
    "google>=3.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.2",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "sqlalchemy>=2.0.40",
]
