[project]
name = "terminal-arcade-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "cachetools>=5.5.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.1.1",
    "pydantic>=2.11.2",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "sqlalchemy>=2.0.40",
]
